feat: production readiness changes for AWS migration (Phase 1)
- Add spring-boot-starter-actuator for /health endpoint (1a)
- Add application-prod.yaml with env-var-driven config (1b)
- Make CORS origins and OAuth redirect URLs configurable via @Value (1c)
- Add psycopg_pool connection pooling to RAG service (1d)
- Add FastAPI lifespan handler to init/close DB pool on startup/shutdown (1d)
- Add AWS migration plan and docs directory